[project]
name = "as2csv"
version = "0.1.0"
description = "Account statement to CSV converter."
authors = [{ name = "Amotoma Halfeye", email = "amotomahalfeye@protonmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "msoffcrypto-tool>=6.0.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "ruff>=0.15.14",
    "xlrd>=2.0.2",
]

[project.scripts]
as2csv = "as2csv:main"

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.uv]
upgrade = true
package = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true
